--- a/src/entities/comment/ui/Comment/Comment.module.scss
+++ b/src/entities/comment/ui/Comment/Comment.module.scss
@@ -2,31 +2,19 @@
 
 .comment {
   display: flex;
-  padding: 0 24px;
+  gap: 12px;
+  padding: 0 24px 15px;
 }
 
-.link {
-  display: contents;
-}
-
-.avatar {
-  margin-top: 8px;
-  margin-right: 12px;
-}
-
-.commentContent {
+.content {
   width: 100%;
 }
 
-.textContent {
+.textWrapper {
   display: flex;
-  align-items: flex-start;
+  gap: 10px;
+  align-items: center;
   justify-content: space-between;
-}
-
-.message {
-  margin-bottom: 5px;
-  line-height: 171%;
 }
 
 .text {
@@ -34,8 +22,6 @@
 }
 
 .buttonHeart {
-  margin-top: 10px;
-  margin-left: 24px;
   padding: 0;
 }
 
@@ -52,36 +38,29 @@
   color: var(--light-100);
 }
 
-.commentFooter {
+.footer {
   display: flex;
   gap: 12px;
-
-  margin-bottom: 15px;
-
-  line-height: 131%;
   color: var(--light-900);
 }
 
 .answerBtn {
-  padding: unset;
+  padding: 0;
   color: var(--light-900);
 }
 
 @include mobile {
-  .shortenedComments {
+  .shortText {
     overflow: hidden;
     display: -webkit-box;
-    grid-area: aboutMe;
 
     text-overflow: ellipsis;
-    word-break: break-all;
 
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
   }
 
   .avatar {
-    width: 36px;
-    height: 36px;
+    display: none;
   }
 }
