--- a/src/entities/profile/ui/ProfileInfo/ProfileInfo.module.scss
+++ b/src/entities/profile/ui/ProfileInfo/ProfileInfo.module.scss
@@ -2,12 +2,11 @@
 
 .ProfileInfo {
   display: grid;
-  grid-template: auto auto auto auto / auto 1fr;
+  grid-template: auto / auto 1fr;
   grid-template-areas:
-    'avatar   settings'
-    'avatar subscriber'
-    'avatar    aboutMe'
-    'name            .';
+    'avatar name settings'
+    'avatar subscriber subscriber'
+    'avatar aboutMe aboutMe';
   gap: 20px 38px;
 
   margin-bottom: 48px;
@@ -27,13 +26,10 @@
 
 .settings {
   grid-area: settings;
-  margin-left: auto;
 }
 
 .avatar {
   grid-area: avatar;
-  width: 200px;
-  height: 200px;
   object-fit: cover;
 }
 
