--- a/src/shared/ui/Dialog/Dialog.module.scss
+++ b/src/shared/ui/Dialog/Dialog.module.scss
@@ -1,8 +1,16 @@
+@import '@/app/styles/mixins';
+
 .overlay {
   position: fixed;
   inset: 0;
   background-color: rgb(0 0 0 / 60%);
   animation: overlayshow 150ms cubic-bezier(0.16, 1, 0.3, 1);
+}
+
+@include mobile {
+  .overlay {
+    background-color: var(--dark-700);
+  }
 }
 
 .title {
