--- a/src/widgets/layout/ui/Header/Header.module.scss
+++ b/src/widgets/layout/ui/Header/Header.module.scss
@@ -1,7 +1,7 @@
 @import '@/app/styles/mixins';
 
 .header {
-  position: sticky;
+  position: fixed;
   z-index: 10;
   top: 0;
 
@@ -23,6 +23,7 @@
   justify-content: space-between;
 
   width: 100%;
+  margin: 0 auto;
   padding: 0 var(--container-padding);
 }
 
@@ -45,10 +46,6 @@
   margin-left: 1.5rem;
 }
 
-.mobile {
-  display: none;
-}
-
 @include tablet {
   .content {
     padding: 12px 18px;
@@ -56,36 +53,7 @@
 }
 
 @include mobile {
-  .pc {
+  .auth {
     display: none;
-  }
-
-  .mobile {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    margin-left: 24px;
-    padding: 0;
-
-    color: var(--light-100);
-  }
-
-  .option {
-    display: flex;
-    column-gap: 10px;
-    align-items: center;
-  }
-
-  .optionLogout {
-    all: unset;
-
-    display: flex;
-    column-gap: 10px;
-    align-items: center;
-
-    font-size: var(--font-size-s);
-    font-weight: var(--font-weight-regular);
-    line-height: var(--line-height-m);
   }
 }
