--- a/src/widgets/layout/ui/PublicLayout/PublicLayout.module.scss
+++ b/src/widgets/layout/ui/PublicLayout/PublicLayout.module.scss
@@ -3,7 +3,7 @@
 .main {
   max-width: 992px;
   height: calc(100vh - var(--header-height));
-  margin: 0 auto;
+  margin: var(--header-height) auto 0;
   padding: 36px 10px;
 }
 
