--- a/src/widgets/post/ui/PostDetailsDialogs/PostDetailsDialogs.module.scss
+++ b/src/widgets/post/ui/PostDetailsDialogs/PostDetailsDialogs.module.scss
@@ -14,14 +14,70 @@
   height: 24px;
 }
 
+.editDialog {
+  display: flex;
+}
+
+.editSlider {
+  width: 50%;
+  height: 503px;
+  border-right: 1px solid var(--dark-100);
+}
+
+.editContent {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  width: 50%;
+}
+
+.editForm {
+  flex-grow: 1;
+}
+
 @include mobile {
   .dialog {
-    height: calc(100vh - var(--header-height));
-    margin-top: 28px;
+    height: calc(100vh - 2 * var(--header-height));
     background-color: var(--dark-700);
+    border: none;
   }
 
   .dialogClose {
     display: none;
+  }
+
+  .editDialog {
+    flex-direction: column;
+  }
+
+  .editSlider {
+    width: 100%;
+    height: 252px;
+    border: none;
+  }
+
+  .editContent {
+    width: 100%;
+  }
+
+  .editSubmit {
+    position: absolute;
+    top: 12px;
+    right: 24px;
+
+    padding: 0;
+
+    color: var(--primary-500);
+
+    background-color: transparent;
+
+    &:disabled {
+      background-color: transparent;
+    }
+
+    &:hover:not(:disabled) {
+      color: var(--primary-100);
+      background-color: transparent;
+    }
   }
 }
