--- a/src/entities/profile/ui/ProfileInfo/ProfileInfo.module.scss
+++ b/src/entities/profile/ui/ProfileInfo/ProfileInfo.module.scss
@@ -95,8 +95,8 @@
   }
 
   .avatar {
-    width: 72px;
-    height: 72px;
+    width: 72px !important;
+    height: 72px !important;
   }
 
   .name {
