--- a/src/entities/post/ui/PublicPostsList/PublicPostsList.module.scss
+++ b/src/entities/post/ui/PublicPostsList/PublicPostsList.module.scss
@@ -1,18 +1,11 @@
-@import '@/app/styles/mixins';
-
 .posts {
   display: grid;
   grid-auto-rows: 391px;
   grid-template-columns: repeat(auto-fit, minmax(234px, 1fr));
   gap: 12px;
+  align-items: start;
 
   margin-top: 12px;
-}
-
-@include tablet {
-  .posts {
-    place-items: center;
-  }
 }
 
 .wrapper {
