--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,3 +1,5 @@
+@import '@/app/styles/mixins';
+
 .container {
   width: 100%;
   max-width: 972px;
@@ -10,4 +12,10 @@
 
 .notification {
   margin: 10px 0;
+}
+
+@include tablet {
+  .users {
+    margin-bottom: 0;
+  }
 }
