IN-233 feat: add MobileCreatePostDialog

--- a/src/shared/ui/PhotoUploader/PhotoUploader.module.scss
+++ b/src/shared/ui/PhotoUploader/PhotoUploader.module.scss
@@ -34,7 +34,6 @@
 }
 
 .button {
-  width: 100%;
   max-width: 300px;
 }
 
@@ -48,6 +47,6 @@
   }
 
   .svgWrapper {
-    margin-bottom: 36px;
+    display: none;
   }
 }
