--- a/src/shared/ui/Dialog/Dialog.module.scss
+++ b/src/shared/ui/Dialog/Dialog.module.scss
@@ -7,11 +7,11 @@
   animation: overlayshow 150ms cubic-bezier(0.16, 1, 0.3, 1);
 }
 
-@include mobile {
-  .overlay {
-    background-color: var(--dark-700);
-  }
-}
+//@include mobile {
+//  .overlay {
+//    background-color: var(--dark-700);
+//  }
+//}
 
 .title {
   display: flex;
