--- a/src/entities/post/ui/LoadedImagesList/LoadedImagesList.module.scss
+++ b/src/entities/post/ui/LoadedImagesList/LoadedImagesList.module.scss
@@ -1,3 +1,5 @@
+@import '@/app/styles/mixins';
+
 .viewport {
   background-color: rgba(#171717, 0.7); // dark-500
   border: none;
@@ -7,6 +9,11 @@
   padding: 6px;
   color: var(--light-100);
   background-color: rgba(#171717, 0.7); // dark-500
+
+  & .icon {
+    width: 24px;
+    height: 24px;
+  }
 
   &[data-state='open'] {
     color: var(--primary-500);
@@ -48,6 +55,12 @@
 
   transition: all 0.2s linear;
 
+  & .icon {
+    width: 13px;
+    height: 13px;
+    color: var(--light-100);
+  }
+
   &:hover {
     background-color: var(--dark-900);
   }
@@ -59,5 +72,53 @@
 
   &:hover {
     color: var(--primary-500);
+  }
+}
+
+@include mobile {
+  .viewport {
+    width: 100vw;
+    background-color: transparent;
+  }
+
+  .expandBtn {
+    background-color: var(--dark-500);
+
+    & .icon {
+      width: 40px;
+      height: 40px;
+    }
+  }
+
+  .images {
+    align-items: center;
+    margin: 10px;
+    background-color: var(--dark-500);
+    border-radius: 2px;
+  }
+
+  .imagesArray {
+    flex-grow: 1;
+    max-width: unset;
+  }
+
+  .image {
+    width: 150px;
+    height: 150px;
+  }
+
+  .deleteBtn {
+    width: 20px;
+    height: 20px;
+
+    & .icon {
+      width: 20px;
+      height: 20px;
+    }
+  }
+
+  .addImageBtn {
+    width: 40px;
+    height: 40px;
   }
 }
