--- a/src/entities/post/ui/ZoomIn/ZoomIn.module.scss
+++ b/src/entities/post/ui/ZoomIn/ZoomIn.module.scss
@@ -1,4 +1,7 @@
+@import '@/app/styles/mixins';
+
 .viewport {
+  width: 150px;
   background-color: rgba(#171717, 0.7); // dark-500
   border: none;
 }
@@ -7,6 +10,11 @@
   padding: 6px;
   color: var(--light-100);
   background-color: rgba(#171717, 0.7); // dark-500
+
+  & .icon {
+    width: 24px;
+    height: 24px;
+  }
 
   &[data-state='open'] {
     color: var(--primary-500);
@@ -25,4 +33,36 @@
   width: 7px;
   height: 7px;
   box-shadow: 0 0 0 4px var(--primary-500);
+}
+
+@include mobile {
+  .viewport {
+    width: 100vw;
+    background-color: transparent;
+  }
+
+  .item {
+    height: 60px;
+    margin: 10px;
+    background-color: var(--dark-500);
+    border-radius: 2px;
+  }
+
+  .expandBtn {
+    background-color: var(--dark-500);
+
+    & .icon {
+      width: 40px;
+      height: 40px;
+    }
+  }
+
+  .sliderTrackClass {
+    height: 10px;
+  }
+
+  .sliderThumbClass {
+    width: 15px;
+    height: 15px;
+  }
 }
