--- a/src/widgets/post/ui/CreatePostDialog/CreatePostDialog.module.scss
+++ b/src/widgets/post/ui/CreatePostDialog/CreatePostDialog.module.scss
@@ -1,3 +1,5 @@
+@import '@/app/styles/mixins';
+
 .dialog {
   width: 100%;
   max-width: 492px;
@@ -11,4 +13,20 @@
 .confirmActions {
   display: flex;
   justify-content: space-between;
+}
+
+@include mobile {
+  .dialog {
+    max-width: unset;
+    height: calc(100vh - (2 * var(--header-height)));
+    margin: 0;
+
+    background-color: var(--dark-700);
+    border: none;
+    border-radius: unset;
+  }
+
+  .extendedDialog {
+    max-width: unset;
+  }
 }
