feat: add responsive markup for profile settings page

--- a/src/feature/profile/ui/EditProfileForm/EditProfileForm.module.scss
+++ b/src/feature/profile/ui/EditProfileForm/EditProfileForm.module.scss
@@ -1,3 +1,5 @@
+@import '@/app/styles/mixins';
+
 .form {
   display: flex;
   flex-direction: column;
@@ -24,5 +26,11 @@
       content: '*';
       color: var(--danger-500);
     }
+  }
+}
+
+@include mobile {
+  .submit {
+    align-self: unset;
   }
 }
