--- a/src/feature/profile/ui/CropperPhoto/CropperPhoto.module.scss
+++ b/src/feature/profile/ui/CropperPhoto/CropperPhoto.module.scss
@@ -1,3 +1,5 @@
+@import '@/app/styles/mixins';
+
 .cropperContainer {
   display: flex;
   flex-direction: column;
@@ -14,4 +16,20 @@
 
 .save {
   align-self: end;
+}
+
+@include mobile {
+  .cropperContainer {
+    padding: 20px 10px;
+  }
+
+  .cropperWindow {
+    width: 350px;
+    height: 350px;
+  }
+
+  .save {
+    align-self: unset;
+    width: 350px;
+  }
 }
