--- a/src/widgets/post/ui/CreatePostDialog/CreatePostDialog.module.scss
+++ b/src/widgets/post/ui/CreatePostDialog/CreatePostDialog.module.scss
@@ -20,6 +20,10 @@
     margin: 0;
   }
 
+  .dialogUpload {
+    width: 95%;
+  }
+
   .confirmActions {
     flex-direction: column;
     gap: 24px;
