IN-252 refactor: after review

--- a/src/shared/ui/RadioGroup/Radio/Radio.module.scss
+++ b/src/shared/ui/RadioGroup/Radio/Radio.module.scss
@@ -1,7 +1,10 @@
 .labelWrapper {
   cursor: pointer;
+
   display: flex;
   align-items: center;
+
+  font-size: var(--font-size-s);
   line-height: var(--line-height-m);
 
   &.disabled {
