--- a/src/widgets/profile/ui/AccountManagement/AccountManagement.module.scss
+++ b/src/widgets/profile/ui/AccountManagement/AccountManagement.module.scss
@@ -1,6 +1,7 @@
 @import '@/app/styles/mixins';
 
 .root {
+  height: 100%;
   padding: 30px 0 12px;
 }
 
@@ -24,11 +25,7 @@
   font-weight: var(--font-weight-semibold);
 }
 
-.type {
-  margin-bottom: 30px;
-}
-
-.sub {
+.item {
   margin-bottom: 24px;
 }
 
@@ -36,7 +33,7 @@
   display: flex;
   gap: 54px;
   align-items: center;
-  justify-content: end;
+  justify-content: flex-end;
 
   & .icon {
     cursor: pointer;
@@ -53,10 +50,47 @@
   }
 }
 
+.payBtn {
+  padding: 0;
+
+  background-color: var(--dark-500);
+  border: 1px solid var(--dark-300);
+  border-radius: 8px;
+
+  transition: all 0.2s;
+
+  &:disabled {
+    opacity: 0.5;
+  }
+
+  &:hover:not(:disabled) {
+    transform: scale(1.04);
+  }
+}
+
+.dialog {
+  width: 100%;
+  max-width: 366px;
+}
+
 @include mobile {
   .payment {
     gap: 24px;
     justify-content: center;
+  }
+
+  .loader {
+    margin-top: 50px;
+  }
+
+  .current,
+  .item {
+    margin-bottom: 10px;
+  }
+
+  .dialog {
+    width: 95%;
+    max-width: unset;
   }
 }
 
