--- a/src/widgets/profile/ui/MyPayments/MyPayments.module.scss
+++ b/src/widgets/profile/ui/MyPayments/MyPayments.module.scss
@@ -17,8 +17,12 @@
   }
 
   .body .row {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+
     padding: 19px 12px 17px;
+
     background-color: var(--dark-500);
     border: 1px solid var(--dark-300);
   }
@@ -31,6 +35,7 @@
   .cell {
     display: flex;
     justify-content: space-between;
+    padding: 0;
     font-weight: 700;
   }
 }
