--- a/src/widgets/profile/ui/MyPayments/MyPayments.module.scss
+++ b/src/widgets/profile/ui/MyPayments/MyPayments.module.scss
@@ -1,7 +1,10 @@
 @import '@/app/styles/mixins';
 
+.root {
+  padding: 24px 0;
+}
+
 .table {
-  margin-top: 4px;
   margin-bottom: 36px;
 }
 
@@ -14,28 +17,28 @@
     display: flex;
     flex-direction: column;
     gap: 12px;
-  }
 
-  .body .row {
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
+    & .row {
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
 
-    padding: 19px 12px 17px;
+      padding: 19px 12px 17px;
 
-    background-color: var(--dark-500);
-    border: 1px solid var(--dark-300);
-  }
-
-  .cell::before {
-    content: attr(data-label);
-    font-weight: 400;
+      background-color: var(--dark-500);
+      border: 1px solid var(--dark-300);
+    }
   }
 
   .cell {
     display: flex;
     justify-content: space-between;
     padding: 0;
-    font-weight: 700;
+    font-weight: var(--font-weight-bold);
+
+    &::before {
+      content: attr(data-label);
+      font-weight: var(--font-weight-regular);
+    }
   }
 }
