--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -14,6 +14,24 @@
   margin: 10px 0;
 }
 
+.errorPage {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  align-items: center;
+  justify-content: center;
+
+  margin-top: 50px;
+
+  .errorImage {
+    max-height: 500px;
+  }
+
+  .link {
+    text-decoration: underline;
+  }
+}
+
 @include tablet {
   .users {
     margin-bottom: 0;
