IN-248 refactor: profile info styles

--- a/src/entities/profile/ui/ProfileInfo/ProfileInfo.module.scss
+++ b/src/entities/profile/ui/ProfileInfo/ProfileInfo.module.scss
@@ -26,6 +26,7 @@
 
 .settings {
   grid-area: settings;
+  align-self: center;
 }
 
 .avatar {
@@ -35,6 +36,7 @@
 
 .name {
   grid-area: name;
+  align-self: center;
 }
 
 .subscriber {
