IN-248 refactor: my payments skeleton show flow

--- a/src/widgets/profile/ui/MyPayments/MyPayments.module.scss
+++ b/src/widgets/profile/ui/MyPayments/MyPayments.module.scss
@@ -9,7 +9,15 @@
   margin-bottom: 36px;
 }
 
+.skeleton {
+  padding: 0;
+}
+
 @include tablet {
+  .table {
+    border: 0;
+  }
+
   .tableHead {
     display: none;
   }
