--- a/src/feature/post/ui/CropperPostScreen/CropperPostScreen.module.scss
+++ b/src/feature/post/ui/CropperPostScreen/CropperPostScreen.module.scss
@@ -1,12 +1,5 @@
 @import '@/app/styles/mixins';
 
-.container {
-  display: flex;
-  gap: 10px;
-  width: 100%;
-  height: 502px;
-}
-
 .slider {
   width: 100%;
   height: 100%;
@@ -39,16 +32,13 @@
 }
 
 @include mobile {
-  .container {
-    flex-direction: column;
-    height: calc(100vh - (2 * var(--header-height)) - 60px);
-  }
-
   .sliderPreview {
     display: block;
+
     width: 100%;
     max-width: 355px;
     height: 150px;
+    margin: 10px auto;
   }
 
   .actions {
@@ -99,11 +89,5 @@
       height: 20px;
       color: var(--light-100);
     }
-  }
-}
-
-@include mobile-small {
-  .container {
-    height: calc(100vh - (2 * var(--header-height)) - 50px);
   }
 }
