--- a/src/feature/post/ui/FiltersScreen/FiltersScreen.module.scss
+++ b/src/feature/post/ui/FiltersScreen/FiltersScreen.module.scss
@@ -1,11 +1,5 @@
 @import '@/app/styles/mixins';
 
-.container {
-  display: flex;
-  width: 100%;
-  height: 502px;
-}
-
 .slider {
   width: 50%;
   height: 100%;
@@ -19,14 +13,9 @@
 }
 
 @include mobile {
-  .container {
-    flex-direction: column;
-    gap: 20px;
-    height: calc(100vh - (2 * var(--header-height)) - 60px);
-  }
-
   .slider {
     width: 100%;
+    margin-bottom: 20px;
   }
 
   .filtersContainer {
