--- a/src/widgets/layout/ui/PublicLayout/PublicLayout.module.scss
+++ b/src/widgets/layout/ui/PublicLayout/PublicLayout.module.scss
@@ -2,7 +2,7 @@
 
 .main {
   max-width: 992px;
-  height: calc(100vh - var(--header-height));
+  height: calc(100dvh - var(--header-height));
   margin: var(--header-height) auto 0;
   padding: 36px 10px;
 }
