--- a/src/widgets/post/ui/PostDetailsDialogs/PostDetailsDialogs.module.scss
+++ b/src/widgets/post/ui/PostDetailsDialogs/PostDetailsDialogs.module.scss
@@ -44,7 +44,7 @@
 @include mobile {
   .dialog {
     width: 100%;
-    height: calc(100vh - 2 * var(--header-height));
+    height: calc(100dvh - 2 * var(--header-height));
     background-color: var(--dark-700);
     border: none;
   }
