IN-260 feat: add logic for deactivate all session
Add current device

--- a/src/widgets/profile/ui/Devices/Devices.module.scss
+++ b/src/widgets/profile/ui/Devices/Devices.module.scss
@@ -7,7 +7,7 @@
 
 .card {
   display: flex;
-  column-gap: 12px;
+  gap: 12px;
   min-height: 120px;
 
   & .icon {
@@ -17,6 +17,10 @@
 
 .title {
   margin-bottom: 12px;
+}
+
+.online {
+  color: var(--primary-500);
 }
 
 .terminate {
@@ -32,6 +36,11 @@
   }
 }
 
+.session {
+  display: flex;
+  gap: 12px;
+}
+
 .logOut {
   margin-left: auto;
   padding: 0;
@@ -39,6 +48,11 @@
   font-size: var(--font-size-s);
   font-weight: var(--font-weight-medium);
   color: var(--light-100);
+
+  &:disabled {
+    cursor: unset;
+    color: var(--light-900);
+  }
 }
 
 .lastVisit {
@@ -59,5 +73,17 @@
   .terminate {
     width: 100%;
     margin: 24px 0 30px;
+  }
+}
+
+@include mobile-small {
+  .card {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .logOut {
+    margin-left: 0;
   }
 }
