--- a/src/widgets/profile/ui/Devices/Devices.module.scss
+++ b/src/widgets/profile/ui/Devices/Devices.module.scss
@@ -77,7 +77,8 @@
 }
 
 @include mobile-small {
-  .card {
+  .card,
+  .session {
     flex-direction: column;
     align-items: center;
     justify-content: center;
