fix: request for idb errors
Refactor: styles & markup

--- a/src/shared/ui/PhotoUploader/PhotoUploader.module.scss
+++ b/src/shared/ui/PhotoUploader/PhotoUploader.module.scss
@@ -28,6 +28,12 @@
   border-radius: 2px;
 }
 
+.label {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
 .imageSvg {
   width: 48px;
   height: 48px;
